fix: fix whitespace

--- a/style.css
+++ b/style.css
@@ -1,5 +1,1 @@
-html {
-    scroll-behavior: smooth; 
-  }
-
 *{box-sizing: border-box;}
